# python-fastset

./: README.md  pyproject.toml  setup.py
src/: Makefile  bitvec.c  domain.c  extension.c  fastsets.h  member.c  set.c  test.py  transform.c
